# ai-dial-mcp-fundamentals

./: .gitignore
agent/: app.py  dial_client.py  mcp_client.py  prompts.py  pyproject.toml
mcp_server/: pyproject.toml  server.py
