[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.8.0",
    "fastmcp==2.10.1",
    "openai==1.93.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "models"
module-root = ""
